# etna

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  get_cpm.cmake  get_version.cmake  thirdparty.cmake
.github/workflows/: comment-lint-results.yaml  comment-test-results.yaml  lint.yaml  linux.yaml  windows.yaml
etna/: .clang-format  .clang-tidy  CMakeLists.txt
etna/include/etna/: Assert.hpp  BarrierBehavior.hpp  BarrierBehavoir.hpp  BindingItems.hpp  BlockingTransferHelper.hpp  Buffer.hpp  CommandManager.hpp  ComputePipeline.hpp  Context.hpp  DebugUtils.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Error.hpp  Etna.hpp  EtnaConfig.hpp  EtnaEngineConfig.hpp.in  Forward.hpp  GlobalContext.hpp  GpuSharedResource.hpp  GpuWorkCount.hpp  GraphicsPipeline.hpp  Image.hpp  OneShotCmdMgr.hpp  PerFrameCmdMgr.hpp  PerFrameTransferHelper.hpp  PipelineBase.hpp  PipelineManager.hpp  Profiling.hpp  Quad.hpp  RenderTargetStates.hpp  Sampler.hpp  ShaderProgram.hpp  UniqueImage.hpp  VertexInput.hpp  Vulkan.hpp  VulkanFormatter.hpp  Window.hpp
etna/include/etna/detail/: ManualLifetime.hpp  StringMap.hpp
etna/source/: BlockingTransferHelper.cpp  Buffer.cpp  CommandManager.cpp  Context.cpp  DebugUtils.cpp  DebugUtils.hpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Etna.cpp  GlobalContext.cpp  GraphicsPipeline.cpp  Image.cpp  OneShotCmdMgr.cpp  PerFrameCmdMgr.cpp  PerFrameTransferHelper.cpp  PipelineBase.cpp  PipelineManager.cpp  Quad.cpp  RenderTargetStates.cpp  Sampler.cpp  ShaderProgram.cpp  SpvReflectHelpers.hpp  StateTracking.cpp  StateTracking.hpp  UniqueImage.cpp  VkHppDispatchLoaderStorage.cpp  Window.cpp
